--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
  FIN  LIBRERIAS FUINCIONALES PARA THETIXS 
 ------------------------------------------>
  <script src="assets/themekit/scripts/jquery.min.js"></script>
-    <script src="assets/themekit/scripts/main.js"></script>
+    <!-- <script src="assets/themekit/scripts/main.js"></script> -->
     <link rel="stylesheet" href="assets/themekit/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/themekit/css/style.css">
     <link rel="stylesheet" href="assets/themekit/css/glide.css">
@@ -92,10 +92,10 @@
 <!-- -----------------------------------
   LIBRERIAS FUINCIONALES PARA THETIXS 
 ------------------------------------------>
-  <script src="assets/plugins/js/jquery.min.js"></script>
-    <script src="assets/plugins/js/bootstrap.min.js"></script>
-    <script src="assets/plugins/js/wysihtml5-0.3.0.js"></script>
-    <script src="assets/plugins/js/bootstrap-wysihtml5.js"></script> 
+  <!-- <script src="assets/plugins/js/jquery.min.js"></script> -->
+    <!-- <script src="assets/plugins/js/bootstrap.min.js"></script> -->
+    <!-- <script src="assets/plugins/js/wysihtml5-0.3.0.js"></script> -->
+    <!-- <script src="assets/plugins/js/bootstrap-wysihtml5.js"></script>  -->
 
 
 <!-- -----------------------------------
